--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Juan Manuel Blanco">
     <title>Pacientes de veterinaria</title>
   </head>
-  <body>
+  <body class="bg-success-subtle">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
